# desafio-python

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/api/: arcade_game.md  armstrong_numbers.md  black_jack.md  capitulo_07_01.md  capitulo_07_02.md  capitulo_07_03.md  capitulo_07_04.md  capitulo_07_05.md  codeland_username_validation.md  collatz_conjecture.md  conditionals.md  difference_of_squares.md  exchange.md  exercicio_01.md  exercicio_02.md  exercicio_03.md  exercicio_04.md  exercicio_05.md  exercicio_06.md  exercicio_07.md  exercicio_08.md  exercicio_09.md  first_factorial.md  grains.md  lasagna.md  leap.md  strings.bd  triangle.md  yacht.md
src/Exercism/black_jack/: black_jack.py
src/coderbyte/: codeland_username_validation.py  first_factorial.py
src/desafio_python/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py
src/livro_nilo/: README.md  capitulo_07_01.py  capitulo_07_02.py  capitulo_07_03.py  capitulo_07_04.py  capitulo_07_05.py
tests/: arcade_game_test.py  armstrong_numbers_test.py  black_jack_test.py  collatz_conjecture_test.py  conditionals_test.py  difference_of_squares_test.py  exchange_test.py  grains_test.py  hello_world_test.py  lasagna_test.py  leap_test.py  strings_test.py  test_capitulo_07_01.py  test_capitulo_07_02.py  test_capitulo_07_03.py  test_capitulo_07_04.py  test_codeland_username_validation.py  test_exercicio_01.py  test_exercicio_02.py  test_exercicio_09.py  test_first_factorial.py  triangle_test.py  yacht_test.py
(+12 files in other folders)
