[tool.poetry]
name = "desafio-python"
version = "0.1.0"
description = ""
authors = ["Cícero <cicerohr@gmail.com>"]
readme = "README.md"
packages = [{ include = "desafio_python", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
